--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened, edited]
 
 
   # Allows you to run this workflow manually from the Actions tab
