--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,9 +4,9 @@ name: CI
 
 # Controls when the workflow will run
 on:
+  push:
+    branches: main
   pull_request:
-    types: [opened, synchronize, reopened, edited]
-
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
